kubernetes/qrlogin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrlogin
  labels:
    app: qrlogin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qrlogin
  template:
    metadata:
      labels:
        app: qrlogin
    spec:
      containers:
        - name: qrlogin
          image: yogakani10/qrlogin
          ports:
            - containerPort: 8085
