kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  type: LoadBalancer
  ports:
  - port: 8090
    protocol: TCP
  selector:
    app: auth
