kubernetes/login-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-ui-service
  labels:
    app: login-ui
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: login-ui
