kubernetes/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product
spec:
  type: LoadBalancer
  ports:
  - port: 8095
    protocol: TCP
  selector:
    app: product
