kubernetes/qrlogin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrlogin-service
  labels:
    app: qrlogin
spec:
  type: LoadBalancer
  ports:
  - port: 8085
    protocol: TCP
  selector:
    app: qrlogin
