kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1.0/login/
            pathType: Prefix
            backend:
              service:
                name: qrlogin-service
                port:
                  number: 8085
          - path: /api/v1.0/user/
            pathType: Prefix
            backend:
              service:
                name: qrlogin-service
                port:
                  number: 8085
          - path: /api/v2.0/token/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8090
          - path: /api/v1.0/crypt/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8090
          - path: /api/v1.0/team/
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8095
